@@ -2,7 +2,11 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.3.3 ]---------------
 
-2004-08-25  Erik Grinaker <erikg@codepoet.no>
+2004-08-27  Erik Grinaker <erikg@codepoet.no>
+
+	* added an xhtml/css exporter
+
+2004-08-26  Erik Grinaker <erikg@codepoet.no>
 
 	* created entry subclasses for various types instead of
 	using the entry dict
